# finance-tracker

./: .gitignore  INSTALLATION_GUIDE_DEV.md  LICENSE  README.md  __main__.py  packages.txt  pyproject.toml  run_web.sh
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.streamlit/: config.toml
docs/: BASE_DONNEES.md  CLI_GUIDE.md  CONCEPTS_FONDAMENTAUX.md  DOCUMENTATION_TECHNIQUE.md  FORMULES_CALCULS.md  INSTALLATION_SETUP.md  INTERFACE_WEB.md  ROADMAP.md
finance_tracker/: __init__.py  cli.py  config.py
finance_tracker/domain/: __init__.py  enums.py  models.py
finance_tracker/i18n/: __init__.py  en.py  fr.py
finance_tracker/repositories/: __init__.py  base.py  sqlmodel_repo.py
finance_tracker/services/: btc_price_service.py  dashboard_service.py  doc_service.py  pdf_report_service.py  projection_service.py  seed_service.py  simulation_pdf_service.py  simulation_service.py
finance_tracker/utils/: dates.py  money.py
finance_tracker/web/: __init__.py  app.py  db.py  navigation.py
finance_tracker/web/ui/: formatters.py
finance_tracker/web/views/: bitcoin.py  dashboard.py  data_manager.py  documentation.py  products.py  report_pdf.py  simulation.py  transactions.py  valuations.py
templates/: report.html  simulation_report.html
tests/: test_dashboard_service.py
