[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finance-tracker"
version = "0.1.0"
description = "Advanced personal finance tracking with SCPI, Bitcoin, insurance, and portfolio analysis"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Developer", email = "dev@example.com" }
]

dependencies = [
    "sqlmodel>=0.0.14",
    "typer[all]>=0.9.0",
    "requests>=2.31.0",
    "weasyprint>=59.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.2",
    "tabulate",
    "streamlit",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "types-requests>=2.31.0",
]

[project.scripts]
finance-tracker = "finance_tracker.cli:app"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E", "W", "F", "I", "N", "UP", "B", "A", "C4", "PIE", "SIM", "RUF"
]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
